# Chembl_PQ

./: README.md  config.yaml  pyproject.toml  script.pq
.github/workflows/: ci.yml
data/input/: output.targets_20250924.csv
data/output/: document_postprocessed.csv  target_postprocessed.csv  testitem_postprocessed.csv
dictionary/_curation/: citation_fraction.csv  document.csv
docs/: CONFIG.md  CONFIG_EN.md  CONFIG_RU.md  DATA_SCHEMA_EN  DATA_SCHEMA_RU  OUTPUT.md  OUTPUT_EN.md  OUTPUT_RU.md  TARGET_PIPELINE_RU.md  USAGE.md  USAGE_EN.md  USAGE_RU.md  get_activity_data_review.md  get_document_data.md  get_testitem_data_lineage.json  get_testitem_data_lineage.md
scripts/: get_activity_data.py  get_assay_data.py  get_document_data.py  get_target_data.py  get_testitem_data.py  make_assay_postprocessing.py  make_document_postprocessing.py  make_target_postprocessing.py  make_testitem_postprocessing.py
tests/: conftest.py  test_config.py  test_loaders.py  test_make_document_postprocessing.py  test_postprocess_assay.py  test_postprocess_document.py  test_postprocess_target.py  test_postprocess_testitem.py  test_transforms.py
tests/data/: activity.csv  assay.csv  document.csv  document_out.csv  document_reference.csv  target.csv  test_config.yaml  testitem.csv  testitem_reference.csv
