[project]
name = "chembl-data-acquisition"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pyyaml",
  "pandas",
  "pyarrow",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
python_files = "test_*.py"
